--- a/website/templates/first_heading.html
+++ b/website/templates/first_heading.html
@@ -1,2 +1,31 @@
-<!-- your html code here -->
-<p>Hello, I'm the first_heading.html</p>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link rel="stylesheet" href="styles.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+
+<div class="container container-fluid">
+    <div class="row">
+        <div class="col-8 ">
+            <div class="izquierda">
+                <h1><strong> First Heading</strong></h1>
+            </div>
+            <div class="derecha">
+                <h1><strong>Will Catch Your Eye</strong></h1>
+            </div>
+            </br>
+            <p>
+                Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta
+                felis euismod semper.
+                Present commodo cursus magna, vel scelerisque nisl
+                consectetur. Fusce dapibus, tellus ac cursus commodo.
+            </p>
+
+        </div>
+        <div class="col-4 img-class">
+            <img class="img-class" alt="Imagen redondeada" src="/website/assets/img/1.jpg">
+        </div>
+    </div>
+</div>
